css and js file name change

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
-    <script src="country_codes.js"></script>
+    <script src="app.js"></script>
+    <script src="codes.js"></script>
 </body>
 </html>
