Added JS and finalizeling HTML

--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
                     <p>From</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png" alt="Flag Image">
-                        <select name="from">
-                            <option value="USD">USD</option>
-                            <option value="INR">INR</option>
-                            <option value="EUR">EUR</option>
-                            <option value="AUD">AUD</option>
-                        </select>
+                        <select name="from"></select>
                     </div>
                 </div>
                 <i class="fa-solid fa-right-left"></i>
@@ -33,12 +28,7 @@
                     <p>From</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/IN/flat/64.png" alt="Flag Image">
-                        <select name="from">
-                            <option value="USD">USD</option>
-                            <option value="INR" selected>INR</option>
-                            <option value="EUR">EUR</option>
-                            <option value="AUD">AUD</option>
-                        </select>
+                        <select name="to"></select>
                     </div>
                 </div>
             </div>
@@ -47,7 +37,7 @@
         </form>
     </div>
 
-    <script src="app.js"></script>
     <script src="codes.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
